--- a/public/index.html
+++ b/public/index.html
@@ -17,5 +17,12 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script
+    src="https://www.paypal.com/sdk/js?client-id=Acar5qjKz_ASZAAdd-QK6UPagP8XF8Xd41BF8qAp7r8puu3epqmKZqRR52OrKYtnPAbkOSrjE2i-JP8Y"> // Required. Replace SB_CLIENT_ID with your sandbox client ID.
+  </script>
+    <script>
+      paypal.Buttons().render('#paypal-button-container');
+      // This function displays Smart Payment Buttons on your web page.
+    </script>
   </body>
 </html>
